--- a/html/index.html
+++ b/html/index.html
@@ -1,13 +1,14 @@
-{{define "index"}}<div class="image-container">
-<img class="logo" src="/img/orion_md.png"><img class="title" src="/img/orion_title.png">
+{{define "index"}}
+<div class="image-container">
+    <img class="logo" src="/img/orion_md.png"><img class="title" src="/img/orion_title.png">
 </div>
 <div class="spacer"></div>
 <div class="text-container">
-<div class="text-left">
-<p>Left text here.</p>
-</div>
-<div class="text-right">
-<p> Right text here.</p>
-</div>
+    <div class="text-left">
+        <p>Left text here.</p>
+    </div>
+    <div class="text-right">
+        <p> Right text here.</p>
+    </div>
 </div>
 {{end}}
